added timer,fixed bugs with randomcoordinates, changed style, deleted some unused code